# developers.home-assistant

./: terraform.tfstate
bonjourr-extension/assets/icons/: README.txt
eadnets-server/: README.md  app.py  cloudflare-tunnel.sh  eadnets  requirements.txt  start-server.sh
eadnets-server/eadnets-server/: main.py  pyproject.toml
mdm-setup/: CONFIGURATOR_CHECKLIST.md  MC888-Pro-Tailscale-Config.md  api-key.txt  com.micromdm.server.plist  tailscale-acl.json  tailscale-test.sh
mdm-setup/backups/20250913_173046/: BACKUP_README.txt
mdm-setup/backups/20250913_173046/device_info/: device_info.txt
mdm-setup/certs/: mdm-certificate.pem  server.crt  server.key
mdm-setup/config/: micromdm.db
mdm-setup/micromdm-config/: micromdm.db
mdm-setup/profiles/: enrollment.mobileconfig
mdm-setup/scripts/: backup-iphone.sh  monitor-iphone.sh  serve-profile.sh  start-micromdm.fish  start-micromdm.sh
