[project]
name = "eadnets-server"
version = "0.1.0"
description = ""
authors = [
    {name = "martin433ai",email = "martin433ai@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Flask==2.3.3",
    "Flask-CORS==4.0.0",
    "PyYAML==6.0.1",
    "requests==2.31.0"
]

[tool.poetry]
packages = [{include = "eadnets_server", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
